<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.generationflex.generationflex.Outfit">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/top"
            android:inputType="text" />

        <EditText
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bottom"
            android:inputType="text" />

        <EditText
            android:id="@+id/shoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoes"
            android:inputType="text" />

        <EditText
            android:id="@+id/accessories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/accessories"
            android:inputType="text" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="switchToYourFlex"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/delete_outfit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="deleteOutfit"
            android:text="@string/delete" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
